<resources>
    <string name="app_name">calories</string>
    <string name="Nama">Masukan Nama :</string>
    <string name="kelamin">Jenis Kelamin :</string>
    <string name="umur">Umur :</string>
    <string name="berat">Berat badan :</string>
    <string name="tinggi">Tinggi Badan :</string>
    <string name="aktivitas">Jenis Aktivitas :</string>
    <string name="result">Hasil</string>
    <string name="Pria">Pria</string>
    <string name="Wanita">Wanita</string>

    <string-array name="jenis_kelamin">
        <item> - </item>
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>

    <string-array name="aktivitas">
        <item> - </item>
        <item>Ringan</item>
        <item>Sedang</item>
        <item>Berat</item>
    </string-array>

</resources>
